kubernetes/apps/infinigon/invoice-ninja/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoice-ninja
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: "Invoice Ninja"
      group: Internal
      ui:
        hide-url: true
spec:
  hostnames:
    - "erp.${TERTIARY_SECRET_DOMAIN}"
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: invoice-ninja-web
          port: 8080
